# docs/swagger.yaml
@@ -2,7 +2,7 @@ basePath: /
 definitions:
   handler.CreateAccountRequest:
     properties:
-      credit_limit:
+      balance:
         type: number
       document_number:
         type: string
@@ -16,16 +16,11 @@ definitions:
       operation_type_id:
         type: integer
     type: object
-  handler.UpdateCreditLimitRequest:
-    properties:
-      credit_limit:
-        type: number
-    type: object
   models.Account:
     properties:
       account_id:
         type: integer
-      credit_limit:
+      balance:
         type: number
       document_number:
         type: string
@@ -109,41 +104,6 @@ paths:
       summary: Get an account
       tags:
       - accounts
-    patch:
-      consumes:
-      - application/json
-      parameters:
-      - description: Account ID
-        in: path
-        name: accountId
-        required: true
-        type: integer
-      - description: New credit limit
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/handler.UpdateCreditLimitRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Account'
-        "400":
-          description: invalid request body
-          schema:
-            type: string
-        "404":
-          description: account not found
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: Update credit limit
-      tags:
-      - accounts
   /transactions:
     post:
       consumes:
@@ -168,7 +128,7 @@ paths:
             type: string
         "422":
           description: account not found / operation type not found / insufficient
-            credit limit
+            balance
           schema:
             type: string
       security:
